<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1d1b1b"
    tools:context="osama.ned.society.Activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/contentView">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/loginUserNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/login_edittext_underlined"
            android:drawableLeft="@drawable/email_new"
            android:drawablePadding="15dp"
            android:fontFamily="sans-serif"
            android:hint="@string/login_username_hint"
            android:inputType="textEmailAddress"
            android:paddingBottom="5dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#c6c6c6"
            android:textCursorDrawable="@null"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/loginPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_edittext_underlined"
            android:drawableLeft="@drawable/lock_new"
            android:drawablePadding="15dp"
            android:fontFamily="sans-serif"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:paddingBottom="5dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#c6c6c6"
            android:textColorLink="#FFFFFF"
            android:textCursorDrawable="@null"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_login"
            android:fontFamily="sans-serif"
            android:text="@string/button_sign_in"
            android:textColor="@drawable/btn_login_color"
            android:textSize="26sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif"
                android:text="@string/do_no_have_account"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/signUpTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="-5dp"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:text="@string/text_sign_up"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>