<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#1d1b1b">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="osama.ned.society.Activities.SignUpAdminActivity"
        android:id="@+id/signUpUserParentLayout">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo"/>

        <EditText
            android:id="@+id/signUpUserEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@drawable/login_edittext_underlined"
            android:drawableLeft="@drawable/email_new"
            android:drawablePadding="15dp"
            android:fontFamily="sans-serif"
            android:hint="@string/sign_up_email_hint"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingBottom="5dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#c6c6c6"
            android:textCursorDrawable="@null"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/signUpUserPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_edittext_underlined"
            android:drawableLeft="@drawable/lock_new"
            android:drawablePadding="15dp"
            android:fontFamily="sans-serif"
            android:hint="@string/sign_up_password_hint"
            android:inputType="textPassword"
            android:paddingBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#c6c6c6"
            android:textColorLink="#FFFFFF"
            android:textCursorDrawable="@null"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/showDetailsPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:paddingTop="7dp"
                android:textColor="#FFFFFF"
                android:textSize="26sp"
                android:text="@string/sign_up_add_more_details" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:src="@drawable/white_down_arrow" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/moreDetailsPanel"
            android:visibility="gone">

            <EditText
                android:id="@+id/signUpUserNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:background="@drawable/login_edittext_underlined"
                android:drawableLeft="@drawable/email_new"
                android:drawablePadding="15dp"
                android:fontFamily="sans-serif"
                android:hint="Name"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingBottom="5dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#c6c6c6"
                android:textCursorDrawable="@null"
                android:textSize="20sp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/signUpUserUniversityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_edittext_underlined"
                android:drawableLeft="@drawable/lock_new"
                android:drawablePadding="15dp"
                android:fontFamily="sans-serif"
                android:hint="University Name"
                android:paddingBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#c6c6c6"
                android:textColorLink="#FFFFFF"
                android:textCursorDrawable="@null"
                android:textSize="20sp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/signUpDepartmentEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_edittext_underlined"
                android:drawableLeft="@drawable/lock_new"
                android:drawablePadding="15dp"
                android:fontFamily="sans-serif"
                android:hint="Department"
                android:paddingBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#c6c6c6"
                android:textColorLink="#FFFFFF"
                android:textCursorDrawable="@null"
                android:textSize="20sp"
                android:inputType="text" />

            <EditText
                android:id="@+id/signUpUserYearEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_edittext_underlined"
                android:drawableLeft="@drawable/lock_new"
                android:drawablePadding="15dp"
                android:fontFamily="sans-serif"
                android:hint="Year of Study"
                android:paddingBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#c6c6c6"
                android:textColorLink="#FFFFFF"
                android:textCursorDrawable="@null"
                android:textSize="20sp"
                android:inputType="number" />

            <EditText
                android:id="@+id/signUpUserRollNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_edittext_underlined"
                android:drawableLeft="@drawable/lock_new"
                android:drawablePadding="15dp"
                android:fontFamily="sans-serif"
                android:hint="Roll Number"
                android:paddingBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#c6c6c6"
                android:textColorLink="#FFFFFF"
                android:textCursorDrawable="@null"
                android:textSize="20sp"
                android:inputType="number" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_sign_up"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:id="@+id/btnSignUp"
                android:textSize="26sp"
                android:background="@drawable/btn_login"
                android:textColor="@drawable/btn_login_color"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:onClick="btnSignUpUserClick" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alreadyRegisteredPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_registered"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_sign_in"
                android:id="@+id/signInTextView"
                android:textSize="24sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="-5dp"
                android:gravity="center_horizontal"
                android:fontFamily="sans-serif" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>